# QCSP_PASSED

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Readme.md  cmake_format_conf.py
data/: CMakeLists.txt  alist_K20_N60_q256.txt  alist_K20_N60_q64.txt  combineStructs.m  compute_ts_score.m  corr_abs_max.m  data_generator_q64_N60_w34_step8_2pi_1.m  data_generator_q64_N60_w4_step4_1pi_2.m  (+7 more)
sources/CDetector/: CDetector.cpp  CDetector.hpp  CMakeLists.txt
sources/CDetector/CScoreProcessor/: CMakeLists.txt  CScoreProcessor.hpp
sources/CDetector/CScoreProcessor/CCorrAbsMax/testing/: CCorrAbsMax_i16_test.cpp  CCorrAbsMax_test.cpp
sources/CDetector/CScoreProcessor/CCorrelationEngine/: CCorrelationEngine.cpp  CCorrelationEngineTemplate.hpp  CCorrelationTimeSliding.hpp
sources/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CCorrAbsMax/: CMakeLists.txt
sources/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CCorrAbsMax/testing/: CCorrAbsMax_i16_test.cpp  CCorrAbsMax_test.cpp
sources/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CIterativeAdder/: CIterativeAdder.hpp  CMakeLists.txt
sources/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CIterativeAdder/testing/: CIterativeAdder_i16_test.cpp  CIterativeAdder_test.cpp
sources/CDetector/CScoreProcessor/CIterativeAdder/testing/: CIterativeAdder_i16_test.cpp  CIterativeAdder_test.cpp
sources/CDetector/CScoreProcessor/CNorm/: CMakeLists.txt  CNorm.cpp
sources/CDetector/CScoreProcessor/CNorm/testing/: CNorm_i16_test.cpp  CNorm_test.cpp
sources/CDetector/CScoreProcessor/CScoreAccumulator/: CMakeLists.txt  CScoreAccumulator.hpp
sources/CDetector/CScoreProcessor/CScoreAccumulator/testing/: CScoreAccumulator_i16_test.cpp  CScoreAccumulator_test.cpp
sources/CDetector/CScoreProcessor/testing/: CScoreProcessor_i16_test.cpp  CScoreProcessor_test.cpp
sources/CDetector/testing/: CDetector_high_test.cpp  CDetector_low_test.cpp  CDetector_qXX_N60_w1_high_test.cpp.in  CDetector_w1_high_test.cpp  CDetector_w1_low_test.cpp  CDetector_w34_pi_8_high_test.cpp  CDetector_w34_pi_8_low_test.cpp  CDetector_w4_pi_4_low_test.cpp
sources/libdetector/CDetector/CScoreProcessor/: CMakeLists.txt  CScoreProcessor.hpp
sources/libdetector/CDetector/CScoreProcessor/CCorrelationEngine/: CCorrelationEngine.hpp
sources/libdetector/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CCorrAbsMax/: CCorrAbsMax.hpp
sources/libdetector/CDetector/CScoreProcessor/CNorm/: CNorm.hpp
sources/libdetector/CDetector/CScoreProcessor/CScoreAccumulator/: CScoreAccumulator.cpp
sources/libdetector/CDetector/CScoreProcessor/CScoreAccumulator/testing/: CScoreAccumulator_i16_test.cpp
sources/libdetectors/: CMakeLists.txt
sources/libdetectors/CDetector/: CDetectionStateGeneric.cpp  CDetectionStateGeneric.hpp  CDetectionStateTemplate.hpp  CDetector.cpp  CDetector.hpp  CDetectorGenericInterface.hpp  CDetectorSerialGeneric.cpp  CDetectorSerialGeneric.hpp  CDetectorSerialMultTemplate.hpp  CDetectorSerialTemplate.hpp  CDetectorTemplateInterface.hpp  CMakeLists.txt
sources/libdetectors/CDetector/CScoreProcessor/: CMakeLists.txt  CScoreProcessor.hpp  CScoreProcessorGeneric.cpp  CScoreProcessorGeneric.hpp
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/: CCorrelationEngineGeneric.cpp  CCorrelationEngineGeneric.hpp  CCorrelationTimeSliding.hpp  CMakeLists.txt
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CCorrAbsMax/: CCorrAbsMax.hpp  CCorrAbsMaxGeneric.cpp  CCorrAbsMaxGeneric.hpp  CMakeLists.txt
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CCorrAbsMax/testing/: CCorrAbsMaxGeneric_test.cpp  CCorrAbsMax_i16_test.cpp  CCorrAbsMax_test.cpp
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CIterativeAdder/: CIterativeAdder.cpp  CIterativeAdder.hpp  CIterativeAdderGeneric.cpp  CIterativeAdderGeneric.hpp  CMakeLists.txt
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CIterativeAdder/testing/: CIterativeAdderGeneric_test.cpp  CIterativeAdder_i16_test.cpp  CIterativeAdder_test.cpp
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CQSpannedSequentialAdder/: CMakeLists.txt  CQSpannedSequentialAdder.cpp  CQSpannedSequentialAdder.hpp  CQSpannedSequentialAdderRC.cpp  CQSpannedSequentialAdderRC.hpp
sources/libdetectors/CDetector/CScoreProcessor/CCorrelationEngine/TimeSliding/CQSpannedSequentialAdder/testing/: CQSpannedSequentialAdderRC_test.cpp  CQSpannedSequentialAdder_i16_test.cpp  CQSpannedSequentialAdder_test.cpp
sources/libdetectors/CDetector/CScoreProcessor/CNorm/: CMakeLists.txt  CNorm.cpp  CNorm.hpp  CNormFP.hpp  CNormGeneric.cpp  CNormGeneric.hpp
sources/libdetectors/CDetector/CScoreProcessor/CNorm/testing/: CNormGeneric_test.cpp  CNorm_i16_test.cpp
sources/libdetectors/CDetector/CScoreProcessor/CScoreAccumulator/: CMakeLists.txt  CScoreAccumulator.hpp  CScoreAccumulatorGeneric.cpp  CScoreAccumulatorGeneric.hpp
sources/libdetectors/CDetector/CScoreProcessor/CScoreAccumulator/testing/: CScoreAccumulatorGeneric_test.cpp
sources/libdetectors/CDetector/CScoreProcessor/testing/: CScoreProcessorGeneric_test.cpp  CScoreProcessor_i16_test.cpp
sources/libdetectors/CDetector/testing/: CDetectorSerialGeneric_qXX_N60_w1_high_test.cpp.in  CDetectorSerialGeneric_w1_low_test.cpp  CDetectorSerialGeneric_w34_pi_8_low_test.cpp  CDetectorSerialGeneric_w4_pi_4_low_test.cpp  CDetectorSerialMult_qXX_N60_w1_high_test.cpp.in  CDetectorSerialMult_w34_pi_8_low_test.cpp  CDetector_qXX_N60_w1_high_test.cpp.in  CDetector_w1_low_test.cpp  CDetector_w34_pi_8_low_test.cpp  CDetector_w4_pi_4_low_test.cpp
sources/simulators/fa_md_scores/: CMakeLists.txt  config.h.in  detector_instantiation.cpp.in  detector_instantiation_int16.cpp.in  main.cpp  main_N_q_w_normed.cpp.in  main_N_q_w_normed_int16.cpp.in  utility_functions.cpp  utility_functions.hpp
sources/simulators/latency_throughput/: CMakeLists.txt  config.h  config.h.in  main.cpp  main_benchmark.cpp.in
(+54 files in other folders)
